--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.4.2",
     "@mui/styled-engine-sc": "^6.4.2",
     "@reduxjs/toolkit": "^2.5.1",
+    "@stripe/stripe-js": "^7.2.0",
     "@tailwindcss/vite": "^4.0.1",
     "@tsparticles/all": "^3.8.0",
     "@tsparticles/react": "^3.0.0",
